// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`base/Member should render member list when it first entered the member page 1`] = `
<body>
  <div>
    <section
      class="css-1pyzu59"
    >
      <div
        class="actiontech-page-header-namespace css-1xspr0w"
      >
        <div
          class="title"
        >
          <div
            class="ant-space ant-space-horizontal ant-space-align-center"
          >
            <div
              class="ant-space-item"
              style="margin-right: 12px;"
            >
              成员与权限管理
            </div>
            <div
              class="ant-space-item"
            >
              <button
                class="ant-btn ant-btn-default ant-btn-sm ant-btn-icon-only basic-button-wrapper css-geipcv"
                type="button"
              >
                <span
                  class="ant-btn-icon"
                >
                  <svg
                    class="custom-icon custom-icon-refresh"
                    height="14"
                    viewBox="0 0 14 14"
                    width="14"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M3.187 2.586a5.833 5.833 0 0 1 8.59 7.762L9.918 7h1.75a4.667 4.667 0 0 0-7.899-3.367zm7.626 8.828a5.833 5.833 0 0 1-8.59-7.762L4.083 7h-1.75a4.667 4.667 0 0 0 7.899 3.367z"
                    />
                  </svg>
                </span>
              </button>
            </div>
          </div>
        </div>
        <div
          class="extra"
        />
      </div>
      <div
        class="segmented-tabs-wrapper"
      >
        <div
          class="ant-row segmented-row-wrapper css-156vlto"
        >
          <div
            class="ant-segmented basic-segmented-wrapper css-192b3m1"
          >
            <div
              class="ant-segmented-group"
            >
              <label
                class="ant-segmented-item ant-segmented-item-selected"
              >
                <input
                  checked=""
                  class="ant-segmented-item-input"
                  type="radio"
                />
                <div
                  class="ant-segmented-item-label"
                  title="成员列表"
                >
                  成员列表
                </div>
              </label>
              <label
                class="ant-segmented-item"
              >
                <input
                  class="ant-segmented-item-input"
                  type="radio"
                />
                <div
                  class="ant-segmented-item-label"
                  title="成员组列表"
                >
                  成员组列表
                </div>
              </label>
            </div>
          </div>
        </div>
        <div
          class="lazy-load-wrapper segmented-item-content lazy-load-wrapper-show css-952l0m"
        >
          <div
            class="ant-table-wrapper actiontech-table-namespace css-fxd6ka"
          >
            <div
              class="ant-spin-nested-loading"
            >
              <div
                class="ant-spin-container"
              >
                <div
                  class="ant-table ant-table-has-fix-right"
                >
                  <div
                    class="ant-table-container"
                  >
                    <div
                      class="ant-table-content"
                    >
                      <table
                        style="table-layout: auto;"
                      >
                        <colgroup>
                          <col
                            style="width: 10%;"
                          />
                          <col
                            style="width: 10%;"
                          />
                          <col
                            style="width: 20%;"
                          />
                          <col
                            style="width: 30%;"
                          />
                          <col
                            style="width: 20%;"
                          />
                          <col
                            style="width: 246px;"
                          />
                        </colgroup>
                        <thead
                          class="ant-table-thead"
                        >
                          <tr>
                            <th
                              class="ant-table-cell"
                              scope="col"
                            >
                              用户名
                            </th>
                            <th
                              class="ant-table-cell"
                              scope="col"
                            >
                              平台角色
                            </th>
                            <th
                              class="ant-table-cell"
                              scope="col"
                            >
                              所属项目
                            </th>
                            <th
                              class="ant-table-cell ellipsis-column-width"
                              scope="col"
                            >
                              <div
                                class="ant-space ant-space-horizontal ant-space-align-center basic-tooltips-wrapper css-4jbtl9"
                              >
                                <div
                                  class="ant-space-item"
                                  style="margin-right: 8px;"
                                >
                                  当前项目操作权限
                                </div>
                                <div
                                  class="ant-space-item"
                                >
                                  <span
                                    aria-label="info-circle"
                                    class="anticon anticon-info-circle tooltips-default-icon"
                                    role="img"
                                  >
                                    <svg
                                      aria-hidden="true"
                                      data-icon="info-circle"
                                      fill="currentColor"
                                      focusable="false"
                                      height="1em"
                                      viewBox="64 64 896 896"
                                      width="1em"
                                    >
                                      <path
                                        d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
                                      />
                                      <path
                                        d="M464 336a48 48 0 1096 0 48 48 0 10-96 0zm72 112h-48c-4.4 0-8 3.6-8 8v272c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V456c0-4.4-3.6-8-8-8z"
                                      />
                                    </svg>
                                  </span>
                                </div>
                              </div>
                            </th>
                            <th
                              class="ant-table-cell"
                              scope="col"
                            >
                              当前项目管理权限
                            </th>
                            <th
                              class="ant-table-cell actiontech-table-actions-column ant-table-cell-fix-right ant-table-cell-fix-right-first"
                              scope="col"
                              style="position: sticky; right: 0px;"
                            >
                              操作
                            </th>
                          </tr>
                        </thead>
                        <tbody
                          class="ant-table-tbody"
                        >
                          <tr
                            class="ant-table-row ant-table-row-level-0"
                            data-row-key="700501"
                          >
                            <td
                              class="ant-table-cell"
                            >
                              admin
                            </td>
                            <td
                              class="ant-table-cell"
                            >
                              -
                            </td>
                            <td
                              class="ant-table-cell"
                            >
                              -
                            </td>
                            <td
                              class="ant-table-cell ellipsis-column-width"
                            >
                              <span>
                                ALL
                              </span>
                            </td>
                            <td
                              class="ant-table-cell"
                            >
                              <span>
                                ALL
                              </span>
                            </td>
                            <td
                              class="ant-table-cell actiontech-table-actions-column ant-table-cell-fix-right ant-table-cell-fix-right-first"
                              style="position: sticky; right: 0px;"
                            >
                              <div
                                class="css-new95e"
                              />
                            </td>
                          </tr>
                          <tr
                            class="ant-table-row ant-table-row-level-0"
                            data-row-key="700502"
                          >
                            <td
                              class="ant-table-cell"
                            >
                              test
                            </td>
                            <td
                              class="ant-table-cell"
                            >
                              <div
                                class="ant-space ant-space-horizontal ant-space-align-center"
                                style="flex-wrap: wrap; margin-bottom: -4px;"
                              >
                                <div
                                  class="ant-space-item"
                                  style="padding-bottom: 4px;"
                                >
                                  <span
                                    class="ant-tag ant-tag-default basic-tag-wrapper basic-small-tag-wrapper css-1q0j97r"
                                    style="height: 28px;"
                                  >
                                    普通用户
                                  </span>
                                </div>
                              </div>
                            </td>
                            <td
                              class="ant-table-cell"
                            >
                              <div
                                class="ant-space ant-space-horizontal ant-space-align-center"
                                style="flex-wrap: wrap; margin-bottom: -4px;"
                              >
                                <div
                                  class="ant-space-item"
                                  style="padding-bottom: 4px;"
                                >
                                  <span
                                    class="ant-tag ant-tag-orange basic-tag-wrapper basic-small-tag-wrapper css-91vcnh"
                                    style="height: 28px;"
                                  >
                                    <svg
                                      height="16"
                                      viewBox="0 0 18 18"
                                      width="16"
                                      xmlns="http://www.w3.org/2000/svg"
                                    >
                                      <path
                                        d="M2.25 2.25h7.037a.75.75 0 0 1 .67.415L10.5 3.75H15a.75.75 0 0 1 .75.75v8.25a.75.75 0 0 1-.75.75h-4.786a.75.75 0 0 1-.671-.415L9 12H3.75v4.5h-1.5z"
                                        fill="#EBAD1C"
                                      />
                                    </svg>
                                    default
                                  </span>
                                </div>
                              </div>
                            </td>
                            <td
                              class="ant-table-cell ellipsis-column-width"
                            >
                              <span>
                                ALL
                              </span>
                            </td>
                            <td
                              class="ant-table-cell"
                            >
                              <span>
                                ALL
                              </span>
                            </td>
                            <td
                              class="ant-table-cell actiontech-table-actions-column ant-table-cell-fix-right ant-table-cell-fix-right-first"
                              style="position: sticky; right: 0px;"
                            >
                              <div
                                class="css-new95e"
                              />
                            </td>
                          </tr>
                          <tr
                            class="ant-table-row ant-table-row-level-0"
                            data-row-key="700503"
                          >
                            <td
                              class="ant-table-cell"
                            >
                              test-2
                            </td>
                            <td
                              class="ant-table-cell"
                            >
                              <div
                                class="ant-space ant-space-horizontal ant-space-align-center"
                                style="flex-wrap: wrap; margin-bottom: -4px;"
                              >
                                <div
                                  class="ant-space-item"
                                  style="padding-bottom: 4px;"
                                >
                                  <span
                                    class="ant-tag ant-tag-default basic-tag-wrapper basic-small-tag-wrapper css-1q0j97r"
                                    style="height: 28px;"
                                  >
                                    普通用户
                                  </span>
                                </div>
                              </div>
                            </td>
                            <td
                              class="ant-table-cell"
                            >
                              <div
                                class="ant-space ant-space-horizontal ant-space-align-center"
                                style="flex-wrap: wrap; margin-bottom: -4px;"
                              >
                                <div
                                  class="ant-space-item"
                                  style="padding-bottom: 4px;"
                                >
                                  <span
                                    class="ant-tag ant-tag-orange basic-tag-wrapper basic-small-tag-wrapper css-91vcnh"
                                    style="height: 28px;"
                                  >
                                    <svg
                                      height="16"
                                      viewBox="0 0 18 18"
                                      width="16"
                                      xmlns="http://www.w3.org/2000/svg"
                                    >
                                      <path
                                        d="M2.25 2.25h7.037a.75.75 0 0 1 .67.415L10.5 3.75H15a.75.75 0 0 1 .75.75v8.25a.75.75 0 0 1-.75.75h-4.786a.75.75 0 0 1-.671-.415L9 12H3.75v4.5h-1.5z"
                                        fill="#EBAD1C"
                                      />
                                    </svg>
                                    default
                                  </span>
                                </div>
                              </div>
                            </td>
                            <td
                              class="ant-table-cell ellipsis-column-width"
                            >
                              <div
                                class="ant-space ant-space-vertical"
                              >
                                <div
                                  class="ant-space-item"
                                >
                                  <div
                                    class="ant-space ant-space-vertical"
                                  >
                                    <div
                                      class="ant-space-item"
                                      style="margin-bottom: 8px;"
                                    >
                                      <span
                                        class="ant-typography"
                                      >
                                        mysql-test
                                        :
                                      </span>
                                    </div>
                                    <div
                                      class="ant-space-item"
                                    >
                                      <div
                                        class="ant-space ant-space-horizontal ant-space-align-center"
                                        style="flex-wrap: wrap; margin-bottom: -4px;"
                                      >
                                        <div
                                          class="ant-space-item"
                                          style="padding-bottom: 4px;"
                                        >
                                          <span
                                            class="ant-tag ant-tag-default basic-tag-wrapper basic-small-tag-wrapper css-1q0j97r"
                                            style="height: 28px;"
                                          >
                                            开发工程师
                                          </span>
                                        </div>
                                      </div>
                                    </div>
                                  </div>
                                </div>
                              </div>
                            </td>
                            <td
                              class="ant-table-cell"
                            >
                              -
                            </td>
                            <td
                              class="ant-table-cell actiontech-table-actions-column ant-table-cell-fix-right ant-table-cell-fix-right-first"
                              style="position: sticky; right: 0px;"
                            >
                              <div
                                class="css-new95e"
                              />
                            </td>
                          </tr>
                        </tbody>
                      </table>
                    </div>
                  </div>
                </div>
                <ul
                  class="ant-pagination ant-table-pagination ant-table-pagination-right actiontech-table-pagination actiontech-table-pagination-fixed"
                >
                  <li
                    class="ant-pagination-total-text"
                  >
                    <span>
                      共 3 条数据
                    </span>
                  </li>
                  <li
                    aria-disabled="true"
                    class="ant-pagination-prev ant-pagination-disabled"
                    title="上一页"
                  >
                    <button
                      class="ant-pagination-item-link"
                      disabled=""
                      tabindex="-1"
                      type="button"
                    >
                      <span
                        aria-label="left"
                        class="anticon anticon-left"
                        role="img"
                      >
                        <svg
                          aria-hidden="true"
                          data-icon="left"
                          fill="currentColor"
                          focusable="false"
                          height="1em"
                          viewBox="64 64 896 896"
                          width="1em"
                        >
                          <path
                            d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 000 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"
                          />
                        </svg>
                      </span>
                    </button>
                  </li>
                  <li
                    class="ant-pagination-item ant-pagination-item-1 ant-pagination-item-active"
                    tabindex="0"
                    title="1"
                  >
                    <a
                      rel="nofollow"
                    >
                      1
                    </a>
                  </li>
                  <li
                    aria-disabled="true"
                    class="ant-pagination-next ant-pagination-disabled"
                    title="下一页"
                  >
                    <button
                      class="ant-pagination-item-link"
                      disabled=""
                      tabindex="-1"
                      type="button"
                    >
                      <span
                        aria-label="right"
                        class="anticon anticon-right"
                        role="img"
                      >
                        <svg
                          aria-hidden="true"
                          data-icon="right"
                          fill="currentColor"
                          focusable="false"
                          height="1em"
                          viewBox="64 64 896 896"
                          width="1em"
                        >
                          <path
                            d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                          />
                        </svg>
                      </span>
                    </button>
                  </li>
                  <li
                    class="ant-pagination-options"
                  >
                    <div
                      aria-label="页码"
                      class="ant-select ant-pagination-options-size-changer ant-select-single ant-select-show-arrow ant-select-show-search"
                    >
                      <div
                        class="ant-select-selector"
                      >
                        <span
                          class="ant-select-selection-search"
                        >
                          <input
                            aria-activedescendant="rc_select_TEST_OR_SSR_list_0"
                            aria-autocomplete="list"
                            aria-controls="rc_select_TEST_OR_SSR_list"
                            aria-expanded="false"
                            aria-haspopup="listbox"
                            aria-label="页码"
                            aria-owns="rc_select_TEST_OR_SSR_list"
                            autocomplete="off"
                            class="ant-select-selection-search-input"
                            id="rc_select_TEST_OR_SSR"
                            role="combobox"
                            type="search"
                            value=""
                          />
                        </span>
                        <span
                          class="ant-select-selection-item"
                          title="20 条/页"
                        >
                          20 条/页
                        </span>
                      </div>
                      <span
                        aria-hidden="true"
                        class="ant-select-arrow"
                        style="user-select: none;"
                        unselectable="on"
                      >
                        <span
                          aria-label="down"
                          class="anticon anticon-down ant-select-suffix"
                          role="img"
                        >
                          <svg
                            aria-hidden="true"
                            data-icon="down"
                            fill="currentColor"
                            focusable="false"
                            height="1em"
                            viewBox="64 64 896 896"
                            width="1em"
                          >
                            <path
                              d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                            />
                          </svg>
                        </span>
                      </span>
                    </div>
                  </li>
                </ul>
              </div>
            </div>
          </div>
        </div>
      </div>
    </section>
  </div>
</body>
`;

exports[`base/Member should update content when change segmented value 1`] = `
<body>
  <div>
    <section
      class="css-1pyzu59"
    >
      <div
        class="actiontech-page-header-namespace css-1xspr0w"
      >
        <div
          class="title"
        >
          <div
            class="ant-space ant-space-horizontal ant-space-align-center"
          >
            <div
              class="ant-space-item"
              style="margin-right: 12px;"
            >
              成员与权限管理
            </div>
            <div
              class="ant-space-item"
            >
              <button
                class="ant-btn ant-btn-default ant-btn-sm ant-btn-icon-only basic-button-wrapper css-geipcv"
                type="button"
              >
                <span
                  class="ant-btn-icon"
                >
                  <svg
                    class="custom-icon custom-icon-refresh"
                    height="14"
                    viewBox="0 0 14 14"
                    width="14"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M3.187 2.586a5.833 5.833 0 0 1 8.59 7.762L9.918 7h1.75a4.667 4.667 0 0 0-7.899-3.367zm7.626 8.828a5.833 5.833 0 0 1-8.59-7.762L4.083 7h-1.75a4.667 4.667 0 0 0 7.899 3.367z"
                    />
                  </svg>
                </span>
              </button>
            </div>
          </div>
        </div>
        <div
          class="extra"
        />
      </div>
      <div
        class="segmented-tabs-wrapper"
      >
        <div
          class="ant-row segmented-row-wrapper css-156vlto"
        >
          <div
            class="ant-segmented basic-segmented-wrapper css-192b3m1"
          >
            <div
              class="ant-segmented-group"
            >
              <label
                class="ant-segmented-item"
              >
                <input
                  checked=""
                  class="ant-segmented-item-input"
                  type="radio"
                />
                <div
                  class="ant-segmented-item-label"
                  title="成员列表"
                >
                  成员列表
                </div>
              </label>
              <label
                class="ant-segmented-item ant-segmented-item-selected"
              >
                <input
                  class="ant-segmented-item-input"
                  type="radio"
                />
                <div
                  class="ant-segmented-item-label"
                  title="成员组列表"
                >
                  成员组列表
                </div>
              </label>
            </div>
          </div>
        </div>
        <div
          class="lazy-load-wrapper segmented-item-content lazy-load-wrapper-hidden css-952l0m"
        >
          <div
            class="ant-table-wrapper actiontech-table-namespace css-fxd6ka"
          >
            <div
              class="ant-spin-nested-loading"
            >
              <div>
                <div
                  aria-busy="true"
                  aria-live="polite"
                  class="ant-spin ant-spin-spinning"
                >
                  <span
                    class="ant-spin-dot ant-spin-dot-spin"
                  >
                    <i
                      class="ant-spin-dot-item"
                    />
                    <i
                      class="ant-spin-dot-item"
                    />
                    <i
                      class="ant-spin-dot-item"
                    />
                    <i
                      class="ant-spin-dot-item"
                    />
                  </span>
                </div>
              </div>
              <div
                class="ant-spin-container ant-spin-blur"
              >
                <div
                  class="ant-table ant-table-empty ant-table-has-fix-right"
                >
                  <div
                    class="ant-table-container"
                  >
                    <div
                      class="ant-table-content"
                    >
                      <table
                        style="table-layout: auto;"
                      >
                        <colgroup>
                          <col
                            style="width: 10%;"
                          />
                          <col
                            style="width: 10%;"
                          />
                          <col
                            style="width: 20%;"
                          />
                          <col
                            style="width: 30%;"
                          />
                          <col
                            style="width: 20%;"
                          />
                          <col
                            style="width: 246px;"
                          />
                        </colgroup>
                        <thead
                          class="ant-table-thead"
                        >
                          <tr>
                            <th
                              class="ant-table-cell"
                              scope="col"
                            >
                              用户名
                            </th>
                            <th
                              class="ant-table-cell"
                              scope="col"
                            >
                              平台角色
                            </th>
                            <th
                              class="ant-table-cell"
                              scope="col"
                            >
                              所属项目
                            </th>
                            <th
                              class="ant-table-cell ellipsis-column-width"
                              scope="col"
                            >
                              <div
                                class="ant-space ant-space-horizontal ant-space-align-center basic-tooltips-wrapper css-4jbtl9"
                              >
                                <div
                                  class="ant-space-item"
                                  style="margin-right: 8px;"
                                >
                                  当前项目操作权限
                                </div>
                                <div
                                  class="ant-space-item"
                                >
                                  <span
                                    aria-label="info-circle"
                                    class="anticon anticon-info-circle tooltips-default-icon"
                                    role="img"
                                  >
                                    <svg
                                      aria-hidden="true"
                                      data-icon="info-circle"
                                      fill="currentColor"
                                      focusable="false"
                                      height="1em"
                                      viewBox="64 64 896 896"
                                      width="1em"
                                    >
                                      <path
                                        d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
                                      />
                                      <path
                                        d="M464 336a48 48 0 1096 0 48 48 0 10-96 0zm72 112h-48c-4.4 0-8 3.6-8 8v272c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V456c0-4.4-3.6-8-8-8z"
                                      />
                                    </svg>
                                  </span>
                                </div>
                              </div>
                            </th>
                            <th
                              class="ant-table-cell"
                              scope="col"
                            >
                              当前项目管理权限
                            </th>
                            <th
                              class="ant-table-cell actiontech-table-actions-column ant-table-cell-fix-right ant-table-cell-fix-right-first"
                              scope="col"
                              style="position: sticky; right: 0px;"
                            >
                              操作
                            </th>
                          </tr>
                        </thead>
                        <tbody
                          class="ant-table-tbody"
                        >
                          <tr
                            class="ant-table-placeholder"
                          >
                            <td
                              class="ant-table-cell"
                              colspan="6"
                            >
                              <div
                                class="ant-empty ant-empty-normal"
                              >
                                <div
                                  class="ant-empty-image"
                                >
                                  <svg
                                    height="41"
                                    viewBox="0 0 64 41"
                                    width="64"
                                    xmlns="http://www.w3.org/2000/svg"
                                  >
                                    <g
                                      fill="none"
                                      fill-rule="evenodd"
                                      transform="translate(0 1)"
                                    >
                                      <ellipse
                                        cx="32"
                                        cy="33"
                                        fill="#f5f5f5"
                                        rx="32"
                                        ry="7"
                                      />
                                      <g
                                        fill-rule="nonzero"
                                        stroke="#d9d9d9"
                                      >
                                        <path
                                          d="M55 12.76L44.854 1.258C44.367.474 43.656 0 42.907 0H21.093c-.749 0-1.46.474-1.947 1.257L9 12.761V22h46v-9.24z"
                                        />
                                        <path
                                          d="M41.613 15.931c0-1.605.994-2.93 2.227-2.931H55v18.137C55 33.26 53.68 35 52.05 35h-40.1C10.32 35 9 33.259 9 31.137V13h11.16c1.233 0 2.227 1.323 2.227 2.928v.022c0 1.605 1.005 2.901 2.237 2.901h14.752c1.232 0 2.237-1.308 2.237-2.913v-.007z"
                                          fill="#fafafa"
                                        />
                                      </g>
                                    </g>
                                  </svg>
                                </div>
                                <div
                                  class="ant-empty-description"
                                >
                                  暂无数据
                                </div>
                              </div>
                            </td>
                          </tr>
                        </tbody>
                      </table>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="lazy-load-wrapper segmented-item-content lazy-load-wrapper-show css-952l0m"
        >
          <div
            class="ant-table-wrapper actiontech-table-namespace css-fxd6ka"
          >
            <div
              class="ant-spin-nested-loading"
            >
              <div
                class="ant-spin-container"
              >
                <div
                  class="ant-table ant-table-fixed-column ant-table-scroll-horizontal ant-table-has-fix-right"
                >
                  <div
                    class="ant-table-container"
                  >
                    <div
                      class="ant-table-content"
                      style="overflow-x: auto; overflow-y: hidden;"
                    >
                      <table
                        style="min-width: 100%; table-layout: auto;"
                      >
                        <colgroup>
                          <col />
                          <col />
                          <col
                            style="width: 30%;"
                          />
                          <col
                            style="width: 30%;"
                          />
                          <col
                            style="width: 164px;"
                          />
                        </colgroup>
                        <thead
                          class="ant-table-thead"
                        >
                          <tr>
                            <th
                              class="ant-table-cell"
                              scope="col"
                            >
                              成员组名
                            </th>
                            <th
                              class="ant-table-cell"
                              scope="col"
                            >
                              用户名
                            </th>
                            <th
                              class="ant-table-cell ellipsis-column-width"
                              scope="col"
                            >
                              <div
                                class="ant-space ant-space-horizontal ant-space-align-center basic-tooltips-wrapper css-4jbtl9"
                              >
                                <div
                                  class="ant-space-item"
                                  style="margin-right: 8px;"
                                >
                                  当前项目操作权限
                                </div>
                                <div
                                  class="ant-space-item"
                                >
                                  <span
                                    aria-label="info-circle"
                                    class="anticon anticon-info-circle tooltips-default-icon"
                                    role="img"
                                  >
                                    <svg
                                      aria-hidden="true"
                                      data-icon="info-circle"
                                      fill="currentColor"
                                      focusable="false"
                                      height="1em"
                                      viewBox="64 64 896 896"
                                      width="1em"
                                    >
                                      <path
                                        d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
                                      />
                                      <path
                                        d="M464 336a48 48 0 1096 0 48 48 0 10-96 0zm72 112h-48c-4.4 0-8 3.6-8 8v272c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V456c0-4.4-3.6-8-8-8z"
                                      />
                                    </svg>
                                  </span>
                                </div>
                              </div>
                            </th>
                            <th
                              class="ant-table-cell"
                              scope="col"
                            >
                              当前项目管理权限
                            </th>
                            <th
                              class="ant-table-cell actiontech-table-actions-column ant-table-cell-fix-right ant-table-cell-fix-right-first"
                              scope="col"
                              style="position: sticky; right: 0px;"
                            >
                              操作
                            </th>
                          </tr>
                        </thead>
                        <tbody
                          class="ant-table-tbody"
                        >
                          <tr
                            aria-hidden="true"
                            class="ant-table-measure-row"
                            style="height: 0px; font-size: 0px;"
                          >
                            <td
                              style="padding: 0px; border: 0px; height: 0px;"
                            >
                              <div
                                style="height: 0px; overflow: hidden;"
                              >
                                 
                              </div>
                            </td>
                            <td
                              style="padding: 0px; border: 0px; height: 0px;"
                            >
                              <div
                                style="height: 0px; overflow: hidden;"
                              >
                                 
                              </div>
                            </td>
                            <td
                              style="padding: 0px; border: 0px; height: 0px;"
                            >
                              <div
                                style="height: 0px; overflow: hidden;"
                              >
                                 
                              </div>
                            </td>
                            <td
                              style="padding: 0px; border: 0px; height: 0px;"
                            >
                              <div
                                style="height: 0px; overflow: hidden;"
                              >
                                 
                              </div>
                            </td>
                            <td
                              style="padding: 0px; border: 0px; height: 0px;"
                            >
                              <div
                                style="height: 0px; overflow: hidden;"
                              >
                                 
                              </div>
                            </td>
                          </tr>
                          <tr
                            class="ant-table-row ant-table-row-level-0"
                            data-row-key="10029384"
                          >
                            <td
                              class="ant-table-cell"
                            >
                              member-group1
                            </td>
                            <td
                              class="ant-table-cell"
                            >
                              <span
                                class="ant-typography ant-typography-ellipsis ant-typography-single-line ant-typography-ellipsis-single-line"
                              >
                                test1、test2
                              </span>
                            </td>
                            <td
                              class="ant-table-cell ellipsis-column-width"
                            >
                              ALL
                            </td>
                            <td
                              class="ant-table-cell"
                            >
                              ALL
                            </td>
                            <td
                              class="ant-table-cell actiontech-table-actions-column ant-table-cell-fix-right ant-table-cell-fix-right-first"
                              style="position: sticky; right: 0px;"
                            >
                              <div
                                class="css-new95e"
                              />
                            </td>
                          </tr>
                          <tr
                            class="ant-table-row ant-table-row-level-0"
                            data-row-key="10039482"
                          >
                            <td
                              class="ant-table-cell"
                            >
                              member-group2
                            </td>
                            <td
                              class="ant-table-cell"
                            >
                              <span
                                class="ant-typography ant-typography-ellipsis ant-typography-single-line ant-typography-ellipsis-single-line"
                              >
                                test3、test4
                              </span>
                            </td>
                            <td
                              class="ant-table-cell ellipsis-column-width"
                            >
                              -
                            </td>
                            <td
                              class="ant-table-cell"
                            >
                              -
                            </td>
                            <td
                              class="ant-table-cell actiontech-table-actions-column ant-table-cell-fix-right ant-table-cell-fix-right-first"
                              style="position: sticky; right: 0px;"
                            >
                              <div
                                class="css-new95e"
                              />
                            </td>
                          </tr>
                          <tr
                            class="ant-table-row ant-table-row-level-0"
                            data-row-key="10039483"
                          >
                            <td
                              class="ant-table-cell"
                            >
                              member-group3
                            </td>
                            <td
                              class="ant-table-cell"
                            >
                              <span
                                class="ant-typography ant-typography-ellipsis ant-typography-single-line ant-typography-ellipsis-single-line"
                              >
                                test、test666
                              </span>
                            </td>
                            <td
                              class="ant-table-cell ellipsis-column-width"
                            >
                              <div
                                class="ant-space ant-space-vertical"
                              >
                                <div
                                  class="ant-space-item"
                                  style="margin-bottom: 8px;"
                                >
                                  <div
                                    class="ant-space ant-space-vertical"
                                  >
                                    <div
                                      class="ant-space-item"
                                      style="margin-bottom: 8px;"
                                    >
                                      <span
                                        class="ant-typography"
                                      >
                                        oracle-test
                                        :
                                      </span>
                                    </div>
                                    <div
                                      class="ant-space-item"
                                    >
                                      <div
                                        class="ant-space ant-space-horizontal ant-space-align-center"
                                        style="flex-wrap: wrap; margin-bottom: -4px;"
                                      >
                                        <div
                                          class="ant-space-item"
                                          style="margin-right: 4px; padding-bottom: 4px;"
                                        >
                                          <span
                                            class="ant-tag ant-tag-default basic-tag-wrapper basic-small-tag-wrapper css-1q0j97r"
                                            style="height: 28px;"
                                          >
                                            开发工程师
                                          </span>
                                        </div>
                                        <div
                                          class="ant-space-item"
                                          style="padding-bottom: 4px;"
                                        >
                                          <span
                                            class="ant-tag ant-tag-default basic-tag-wrapper basic-small-tag-wrapper css-1q0j97r"
                                            style="height: 28px;"
                                          >
                                            运维工程师
                                          </span>
                                        </div>
                                      </div>
                                    </div>
                                  </div>
                                </div>
                                <div
                                  class="ant-space-item"
                                >
                                  <div
                                    class="ant-space ant-space-vertical"
                                  >
                                    <div
                                      class="ant-space-item"
                                      style="margin-bottom: 8px;"
                                    >
                                      <span
                                        class="ant-typography"
                                      >
                                        mysql-test
                                        :
                                      </span>
                                    </div>
                                    <div
                                      class="ant-space-item"
                                    >
                                      <div
                                        class="ant-space ant-space-horizontal ant-space-align-center"
                                        style="flex-wrap: wrap; margin-bottom: -4px;"
                                      >
                                        <div
                                          class="ant-space-item"
                                          style="padding-bottom: 4px;"
                                        >
                                          <span
                                            class="ant-tag ant-tag-default basic-tag-wrapper basic-small-tag-wrapper css-1q0j97r"
                                            style="height: 28px;"
                                          >
                                            开发工程师
                                          </span>
                                        </div>
                                      </div>
                                    </div>
                                  </div>
                                </div>
                              </div>
                            </td>
                            <td
                              class="ant-table-cell"
                            >
                              <div
                                class="ant-space ant-space-horizontal ant-space-align-center"
                                style="flex-wrap: wrap; margin-bottom: -8px;"
                              >
                                <div
                                  class="ant-space-item"
                                  style="margin-right: 8px; padding-bottom: 8px;"
                                >
                                  <span
                                    class="ant-tag ant-tag-default basic-tag-wrapper basic-small-tag-wrapper css-1q0j97r"
                                    style="height: 28px;"
                                  >
                                    数据源管理
                                  </span>
                                </div>
                                <div
                                  class="ant-space-item"
                                  style="padding-bottom: 8px;"
                                >
                                  <span
                                    class="ant-tag ant-tag-default basic-tag-wrapper basic-small-tag-wrapper css-1q0j97r"
                                    style="height: 28px;"
                                  >
                                    成员管理
                                  </span>
                                </div>
                              </div>
                            </td>
                            <td
                              class="ant-table-cell actiontech-table-actions-column ant-table-cell-fix-right ant-table-cell-fix-right-first"
                              style="position: sticky; right: 0px;"
                            >
                              <div
                                class="css-new95e"
                              />
                            </td>
                          </tr>
                          <tr
                            class="ant-table-row ant-table-row-level-0"
                            data-row-key="10029385"
                          >
                            <td
                              class="ant-table-cell"
                            >
                              member-group9
                            </td>
                            <td
                              class="ant-table-cell"
                            />
                            <td
                              class="ant-table-cell ellipsis-column-width"
                            >
                              -
                            </td>
                            <td
                              class="ant-table-cell"
                            >
                              -
                            </td>
                            <td
                              class="ant-table-cell actiontech-table-actions-column ant-table-cell-fix-right ant-table-cell-fix-right-first"
                              style="position: sticky; right: 0px;"
                            >
                              <div
                                class="css-new95e"
                              />
                            </td>
                          </tr>
                        </tbody>
                      </table>
                    </div>
                  </div>
                </div>
                <ul
                  class="ant-pagination ant-table-pagination ant-table-pagination-right actiontech-table-pagination actiontech-table-pagination-fixed"
                >
                  <li
                    class="ant-pagination-total-text"
                  >
                    <span>
                      共 4 条数据
                    </span>
                  </li>
                  <li
                    aria-disabled="true"
                    class="ant-pagination-prev ant-pagination-disabled"
                    title="上一页"
                  >
                    <button
                      class="ant-pagination-item-link"
                      disabled=""
                      tabindex="-1"
                      type="button"
                    >
                      <span
                        aria-label="left"
                        class="anticon anticon-left"
                        role="img"
                      >
                        <svg
                          aria-hidden="true"
                          data-icon="left"
                          fill="currentColor"
                          focusable="false"
                          height="1em"
                          viewBox="64 64 896 896"
                          width="1em"
                        >
                          <path
                            d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 000 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"
                          />
                        </svg>
                      </span>
                    </button>
                  </li>
                  <li
                    class="ant-pagination-item ant-pagination-item-1 ant-pagination-item-active"
                    tabindex="0"
                    title="1"
                  >
                    <a
                      rel="nofollow"
                    >
                      1
                    </a>
                  </li>
                  <li
                    aria-disabled="true"
                    class="ant-pagination-next ant-pagination-disabled"
                    title="下一页"
                  >
                    <button
                      class="ant-pagination-item-link"
                      disabled=""
                      tabindex="-1"
                      type="button"
                    >
                      <span
                        aria-label="right"
                        class="anticon anticon-right"
                        role="img"
                      >
                        <svg
                          aria-hidden="true"
                          data-icon="right"
                          fill="currentColor"
                          focusable="false"
                          height="1em"
                          viewBox="64 64 896 896"
                          width="1em"
                        >
                          <path
                            d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                          />
                        </svg>
                      </span>
                    </button>
                  </li>
                  <li
                    class="ant-pagination-options"
                  >
                    <div
                      aria-label="页码"
                      class="ant-select ant-pagination-options-size-changer ant-select-single ant-select-show-arrow ant-select-show-search"
                    >
                      <div
                        class="ant-select-selector"
                      >
                        <span
                          class="ant-select-selection-search"
                        >
                          <input
                            aria-activedescendant="rc_select_TEST_OR_SSR_list_0"
                            aria-autocomplete="list"
                            aria-controls="rc_select_TEST_OR_SSR_list"
                            aria-expanded="false"
                            aria-haspopup="listbox"
                            aria-label="页码"
                            aria-owns="rc_select_TEST_OR_SSR_list"
                            autocomplete="off"
                            class="ant-select-selection-search-input"
                            id="rc_select_TEST_OR_SSR"
                            role="combobox"
                            type="search"
                            value=""
                          />
                        </span>
                        <span
                          class="ant-select-selection-item"
                          title="20 条/页"
                        >
                          20 条/页
                        </span>
                      </div>
                      <span
                        aria-hidden="true"
                        class="ant-select-arrow"
                        style="user-select: none;"
                        unselectable="on"
                      >
                        <span
                          aria-label="down"
                          class="anticon anticon-down ant-select-suffix"
                          role="img"
                        >
                          <svg
                            aria-hidden="true"
                            data-icon="down"
                            fill="currentColor"
                            focusable="false"
                            height="1em"
                            viewBox="64 64 896 896"
                            width="1em"
                          >
                            <path
                              d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                            />
                          </svg>
                        </span>
                      </span>
                    </div>
                  </li>
                </ul>
              </div>
            </div>
          </div>
        </div>
      </div>
    </section>
  </div>
</body>
`;
